CVSB-9217 - update vulnerable dependencies, replace mocha, and add some coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
-# must be unique in a given SonarQube instance
+#sonar.host.url=http://localhost:9000
 sonar.host.url=http://volted-monkey-sonarqube.ops:9000
 
+# must be unique in a given SonarQube instance
 sonar.projectKey=org.sonarqube:cvs-tsk-cert-gen-init
 
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
@@ -11,8 +12,7 @@ sonar.projectVersion=1.0
 # This property is optional if sonar.modules is set.
 sonar.sources=src
 
-sonar.exclusions=.build, src/models/**, src/config/**, src/models/**, src/handler.ts, src/functions/certGenInit.ts
-
-sonar.ts.tslintconfigpath=tslint.json
+sonar.exclusions=.build, src/models/**, src/config/**
+sonar.ts.tslint.configpath=tslint.json
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 sonar.sourceEncoding=UTF-8
